src/compiler/tests/valid/suma/suma.klt
var numero: Int = 5;

fun sumar (num1: Int): Int {
    return (num1 + numero);
}

fun main (): None {
    var numero: Int = -5;
    var resultado: Int;

    resultado = sumar(numero);
    print("La suma es %d", resultado);
}