src/compiler/tests/invalid/carry/carry.klt
var globalC: Int;

fun main (): None {
    globalC = 999999 * (2 + 4 + 3 + 5 + (6666 + 3 + 3) + (-5));
    print("El resultado es %d", globalC);
}